# vision-squeezer

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  netlify.toml  package.json  postinstall.js  server.json  smithery.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: index.html  llms-full.txt  llms.txt  robots.txt  script.js  sitemap.xml  style.css
docs/assets/: site.webmanifest
scripts/: postinstall.js
skills/vision-doctor/: SKILL.md
skills/vision-stats/: SKILL.md
skills/vision-upgrade/: SKILL.md
src/: lib.rs  main.rs  mcp_server.rs
